[package]
name = "spi-memory"
version = "0.3.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>"]
edition = "2021"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory/"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
license = "0BSD"

[dependencies]
embedded-hal = "0.2.7"
log = { version = "0.4.17", optional = true }
bitflags = "1.3.2"
