[package]
name = "erust-turret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_queue = { path = "../../event_queue" }
servo = { path = "../../servo" }
vl53l1x = { path = "../../VL53L1X" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = { version = "1.1.1" }
embedded-hal = "0.2.7"
fugit = "0.3.6"
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103", "rt", "medium"] }

# panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[[bin]]
name = "erust-turret"
test = false
bench = false
doctest = false
