[package]
name = "erust-turret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../../board" }
calibration = { path = "../../calibration" }
event_queue = { path = "../../event_queue" }
servo = { path = "../../servo" }
simplefs = { path = "../../simplefs" }
vl53l1x = { git = "https://github.com/rblaze/erust-VL53L1X.git" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = { version = "1.1" }
embedded-hal = "0.2"
fastrand = { version = "2.0", default-features = false }
fugit = "0.3"
nb = "1.0"
num = { version = "0.4", default-features = false }
spi-memory = "0.2"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt", "medium"] }

# panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-rtt"] }
rtt-target = "0.4"

[[bin]]
name = "erust-turret"
test = false
bench = false
doctest = false
