[package]
name = "flash-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../../board" }
bytes = { git = "https://github.com/rblaze/embedded-bytes.git", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = { version = "1.1.1" }
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.1.0"
spi-memory = "0.2.0"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt", "medium"] }

panic-probe = { version = "0.3.0", features = ["print-rtt"] }
rtt-target = "0.4.0"

[[bin]]
name = "flash-writer"
test = false
bench = false
doctest = false
