[package]
name = "sound-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false
doctest = false

[dependencies]
embedded-hal = "0.2.7"
littlefs2 = "0.3.2"
spi-memory = { path = "../../spi-memory" }
